syntax = "proto3";

import "systems/ajax/malov/commonmodel/stock/big_decimal.proto";
import "google/protobuf/timestamp.proto";

package systems.ajax.malov.commonmodel.stock;

option java_multiple_files = true;

message StockPrice {
  string stock_symbol_name = 1;
  commonmodel.stock.BigDecimalProto price = 2;
  google.protobuf.Timestamp timestamp = 3;
}
