syntax = "proto3";

package systems.ajax.malov.grpcapi.reqres.stock;

option java_multiple_files = true;

message GetStockPriceRequest {
  string symbolName = 1;
}
